# BottleneckOS

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  DESIGN.md  EVIDENCE.md  LICENSE  MVP_SPEC.md  PRODUCTION_ROADMAP.md  README.md  README.zh-CN.md  SOURCE_POLICY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: tests.yml
bottleneck_os/: __init__.py  __main__.py  acquisition.py  api.py  coverage.py  diffing.py  evidence_audit.py  expert_signal.py  extractor.py  fetcher.py  llm_extractor.py  models.py  policy.py  readiness.py  reporting.py  repository.py  review.py  rss_fetcher.py  schemas.py  scoring.py  seed_data.py  storage.py  thesis.py  trends.py
scripts/: compare_runs.py  extract_claims.py  fetch_feeds.py  fetch_sources.py  generate_acquisition_plan.py  generate_report.py  historical_trends.py  ingest_sources.py  persist_run.py  production_audit.py  report_from_review.py
sources/: README.md  feeds.txt  manifest.real.txt
tests/: test_acquisition.py  test_api.py  test_coverage.py  test_diffing.py  test_evidence_audit.py  test_expert_signal.py  test_extractor.py  test_fetcher.py  test_readiness.py  test_reporting.py  test_review.py  test_schemas.py  test_scoring.py  test_storage.py  test_trends.py
web/: index.html
