[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bottleneck-os"
version = "0.1.0"
description = "Evidence-backed radar for AI infrastructure bottlenecks."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Bottleneck OS contributors" }
]
dependencies = []

[project.optional-dependencies]
llm = [
  "openai>=1.0",
  "anthropic>=0.25",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["bottleneck_os*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
